; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_collect_diff.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_collect_diff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_ranges = type { i32 }
%struct.collect_diff_cbdata = type { %struct.diff_ranges*, i32* }
%struct.TYPE_8__ = type { %struct.collect_diff_cbdata*, i32, i64, i64 }

@collect_diff_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.diff_ranges*)* @collect_diff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @collect_diff(i32* %0, i32* %1, %struct.diff_ranges* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.diff_ranges*, align 8
  %7 = alloca %struct.collect_diff_cbdata, align 8
  %8 = alloca %struct.TYPE_8__, align 8
  %9 = alloca %struct.TYPE_8__, align 8
  %10 = alloca %struct.TYPE_8__, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.diff_ranges* %2, %struct.diff_ranges** %6, align 8
  %11 = bitcast %struct.collect_diff_cbdata* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %11, i8 0, i64 16, i1 false)
  %12 = call i32 @memset(%struct.TYPE_8__* %8, i32 0, i32 32)
  %13 = call i32 @memset(%struct.TYPE_8__* %9, i32 0, i32 32)
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 2
  store i64 0, i64* %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = load %struct.diff_ranges*, %struct.diff_ranges** %6, align 8
  %17 = getelementptr inbounds %struct.collect_diff_cbdata, %struct.collect_diff_cbdata* %7, i32 0, i32 0
  store %struct.diff_ranges* %16, %struct.diff_ranges** %17, align 8
  %18 = load i32, i32* @collect_diff_cb, align 4
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 1
  store i32 %18, i32* %19, align 8
  %20 = call i32 @memset(%struct.TYPE_8__* %10, i32 0, i32 32)
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  store %struct.collect_diff_cbdata* %7, %struct.collect_diff_cbdata** %21, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @xdi_diff(i32* %22, i32* %23, %struct.TYPE_8__* %8, %struct.TYPE_8__* %9, %struct.TYPE_8__* %10)
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @memset(%struct.TYPE_8__*, i32, i32) #2

declare dso_local i32 @xdi_diff(i32*, i32*, %struct.TYPE_8__*, %struct.TYPE_8__*, %struct.TYPE_8__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
